force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Lead_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>99Acres</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
                <isActive>false</isActive>
                <label>99 Acres</label>
            </value>
            <value>
                <fullName>AIC</fullName>
                <isActive>false</isActive>
                <label>AIC</label>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Archive Leads</fullName>
            </value>
            <value>
                <fullName>Atul Sir</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
                <isActive>false</isActive>
                <label>Billboard</label>
            </value>
            <value>
                <fullName>Bill Board</fullName>
                <isActive>false</isActive>
                <label>Bill Board</label>
            </value>
            <value>
                <fullName>Bombay Times</fullName>
                <isActive>false</isActive>
                <label>Bombay Times</label>
            </value>
            <value>
                <fullName>Booked_Cancelled</fullName>
            </value>
            <value>
                <fullName>Brochure Download</fullName>
                <isActive>false</isActive>
                <label>Brochure Download</label>
            </value>
            <value>
                <fullName>Bulk WhatsApp</fullName>
                <isActive>false</isActive>
                <label>Bulk WhatsApp</label>
            </value>
            <value>
                <fullName>Bulk Whatsapp_Lost</fullName>
            </value>
            <value>
                <fullName>Bus Shelter</fullName>
                <isActive>false</isActive>
                <label>Bus Shelter</label>
            </value>
            <value>
                <fullName>Bus Wrap</fullName>
                <isActive>false</isActive>
                <label>Bus Wrap</label>
            </value>
            <value>
                <fullName>Cable Network</fullName>
                <isActive>false</isActive>
                <label>Cable Network</label>
            </value>
            <value>
                <fullName>Centralised</fullName>
                <isActive>false</isActive>
                <label>Centralised</label>
            </value>
            <value>
                <fullName>Centralized IVR</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
                <isActive>false</isActive>
                <label>Channel Partner</label>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Columbia Ads</fullName>
                <isActive>false</isActive>
                <label>Columbia Ads</label>
            </value>
            <value>
                <fullName>Common Floor</fullName>
                <isActive>false</isActive>
                <label>Common Floor</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
                <isActive>false</isActive>
                <label>CPC</label>
            </value>
            <value>
                <fullName>CPC Colombia</fullName>
                <isActive>false</isActive>
                <label>CPC Colombia</label>
            </value>
            <value>
                <fullName>CPC Moneycontrol</fullName>
                <isActive>false</isActive>
                <label>CPC Moneycontrol</label>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>D&amp;B Database</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>