force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Leasing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Leasing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Leasing</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>