force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Local_Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Local_Contact_Mobile_Number__c</fullName>
    <label>Local Contact Mobile Number</label>
    <type>Phone</type>
</CustomField>