force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Local_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Local_Contact_Relation__c</fullName>
    <label>Local Contact Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>