force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>ABC chowk</fullName>
            </value>
            <value>
                <fullName>Ambegaon</fullName>
            </value>
            <value>
                <fullName>Aundh</fullName>
            </value>
            <value>
                <fullName>Balewadi</fullName>
            </value>
            <value>
                <fullName>Baner</fullName>
            </value>
            <value>
                <fullName>Bavdhan</fullName>
            </value>
            <value>
                <fullName>BT Kawade Rd</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Dapodi</fullName>
            </value>
            <value>
                <fullName>Dhanori</fullName>
            </value>
            <value>
                <fullName>DP Rd</fullName>
            </value>
            <value>
                <fullName>Ghorpadi</fullName>
            </value>
            <value>
                <fullName>Gokhalenagar</fullName>
            </value>
            <value>
                <fullName>Hadapsar</fullName>
            </value>
            <value>
                <fullName>Hinjewadi</fullName>
            </value>
            <value>
                <fullName>Kalas</fullName>
            </value>
            <value>
                <fullName>Kalyaninagar</fullName>
            </value>
            <value>
                <fullName>Karvenagar</fullName>
            </value>
            <value>
                <fullName>Katraj</fullName>
            </value>
            <value>
                <fullName>Khadki</fullName>
            </value>
            <value>
                <fullName>Kharadi</fullName>
            </value>
            <value>
                <fullName>Kondhwa</fullName>
            </value>
            <value>
                <fullName>Koregaon Park</fullName>
            </value>
            <value>
                <fullName>Kothrud</fullName>
            </value>
            <value>
                <fullName>Lohegaon</fullName>
            </value>
            <value>
                <fullName>Magarpatta</fullName>
            </value>
            <value>
                <fullName>MG Road</fullName>
            </value>
            <value>
                <fullName>Mundhwa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>