force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Location_if_Other__c.field-meta.xml
<CustomField>
    <fullName>EYI_Location_if_Other__c</fullName>
    <label>Location (if Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>