force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Looking_For__c.field-meta.xml
<CustomField>
    <fullName>EYI_Looking_For__c</fullName>
    <label>Looking For?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Friend / Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>