force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Marketing_Campaign_name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Marketing_Campaign_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Customer Information Form</relationshipLabel>
    <relationshipName>Customer_Information_Form</relationshipName>
    <type>Lookup</type>
</CustomField>