force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile_number__c</fullName>
    <label>Mobile number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>