force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Mobile_number_Formula__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile_number_Formula__c</fullName>
    <formula>RIGHT( EYI_Mobile_number__c , 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile number Formula</label>
    <type>Text</type>
</CustomField>