force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Nature_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>EYI_Nature_of_Lead__c</fullName>
    <label>Nature of Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outright</fullName>
                <default>true</default>
                <label>Outright</label>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>