force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>Defence</fullName>
                <isActive>false</isActive>
                <label>Defence</label>
            </value>
            <value>
                <fullName>Govt employee</fullName>
                <isActive>false</isActive>
                <label>Govt employee</label>
            </value>
            <value>
                <fullName>Private Service</fullName>
                <isActive>false</isActive>
                <label>Private Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>