force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_OCI__c.field-meta.xml
<CustomField>
    <fullName>EYI_OCI__c</fullName>
    <label>OCI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>