force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Office_Pincode__c</fullName>
    <label>Office Pincode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>