force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CIF Records</relationshipLabel>
    <relationshipName>CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>