force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>