force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please enter a valid Pincode</errorMessage>
        <filterItems>
            <field>EYI_Panchshil_Master__c.Master_Type__c</field>
            <operation>equals</operation>
            <value>Pincode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Panchshil_Master__c</referenceTo>
    <relationshipLabel>CIF Records</relationshipLabel>
    <relationshipName>CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>