force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Possession_Timeline__c.field-meta.xml
<CustomField>
    <fullName>EYI_Possession_Timeline__c</fullName>
    <label>Possession Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>