force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Presales_Executive__c.field-meta.xml
<CustomField>
    <fullName>EYI_Presales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Executive</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Pre-Sales</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Leasing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Information_Form</relationshipName>
    <type>Lookup</type>
</CustomField>