force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Primary_Mob_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Primary_Mob_No_with_Country_Code__c</fullName>
    <formula>TEXT(EYI_Country_code__c) &amp;  EYI_Mobile_number__c</formula>
    <label>Primary Mob No with Country Code</label>
    <type>Text</type>
</CustomField>