force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Project_Enquired__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Enquired__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Enquired</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>