force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Project_Name_for_CIF__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Name_for_CIF__c</fullName>
    <formula>EYI_Project_Enquired__r.Name</formula>
    <label>Project Name for CIF</label>
    <type>Text</type>
</CustomField>