force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Project_Purchased__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Purchased__c</fullName>
    <label>Project Purchased</label>
    <length>50</length>
    <type>Text</type>
</CustomField>