force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Property__c.field-meta.xml
<CustomField>
    <fullName>EYI_Property__c</fullName>
    <label>Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>46 Banyan Tree</fullName>
            </value>
            <value>
                <fullName>86 Banyan Tree</fullName>
            </value>
            <value>
                <fullName>Avant Garde</fullName>
            </value>
            <value>
                <fullName>Balewadi</fullName>
            </value>
            <value>
                <fullName>Casa 9</fullName>
            </value>
            <value>
                <fullName>Central Park</fullName>
            </value>
            <value>
                <fullName>ELEVEN WEST</fullName>
            </value>
            <value>
                <fullName>EON Waterfront II</fullName>
            </value>
            <value>
                <fullName>Eon Waterfront PH I</fullName>
            </value>
            <value>
                <fullName>Forest Castle</fullName>
            </value>
            <value>
                <fullName>Futura</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Gold Craft</fullName>
            </value>
            <value>
                <fullName>Golden Bell</fullName>
            </value>
            <value>
                <fullName>New Commercial</fullName>
            </value>
            <value>
                <fullName>New Residential</fullName>
            </value>
            <value>
                <fullName>Ocean Tower</fullName>
            </value>
            <value>
                <fullName>One North</fullName>
            </value>
            <value>
                <fullName>Panchshil Avenue</fullName>
            </value>
            <value>
                <fullName>Panchshil Towers</fullName>
            </value>
            <value>
                <fullName>Queens Court</fullName>
            </value>
            <value>
                <fullName>Satellite Towers</fullName>
            </value>
            <value>
                <fullName>SoHo</fullName>
            </value>
            <value>
                <fullName>Ssilverwoods</fullName>
            </value>
            <value>
                <fullName>The Address</fullName>
            </value>
            <value>
                <fullName>The Chambers</fullName>
            </value>
            <value>
                <fullName>The Golden Bell II</fullName>
            </value>
            <value>
                <fullName>Trump Towers</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>WestView</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>