force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>EYI_Purpose_of_Purchase__c</fullName>
    <defaultValue>&quot;End User&quot;</defaultValue>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End Use</fullName>
                <default>true</default>
                <label>End Use</label>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>Capital Gain</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
                <isActive>false</isActive>
                <label>End User</label>
            </value>
            <value>
                <fullName>Gift</fullName>
                <isActive>false</isActive>
                <label>Gift</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>