force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Reason_For_Purchase__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reason_For_Purchase__c</fullName>
    <label>Reason For Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Area Sqft Upgrade</fullName>
            </value>
            <value>
                <fullName>Capital Gain</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Amenities Upgrade</fullName>
            </value>
            <value>
                <fullName>Rental Yield</fullName>
            </value>
            <value>
                <fullName>Location Upgrade</fullName>
            </value>
            <value>
                <fullName>Close To Work</fullName>
            </value>
            <value>
                <fullName>Close To School</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>