force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_REC__c.EYI_REC_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>CIF Records</relationshipLabel>
    <relationshipName>CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>