force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_Email_Non_Registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Email_Non_Registered__c</fullName>
    <label>REC Email (Non - Registered)</label>
    <type>Email</type>
</CustomField>