force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_Executive_LastName_NonRegistered__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Executive_LastName_NonRegistered__c</fullName>
    <label>REC Executive Last Name(Non-Registered)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>