force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Location__c</fullName>
    <label>REC Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Address_Type</valueSetName>
    </valueSet>
</CustomField>