force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_PAN_No_Non_Registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_PAN_No_Non_Registered__c</fullName>
    <label>REC PAN No. (Non-Registered)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>