force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_REC_RERA_Registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_RERA_Registered__c</fullName>
    <label>REC RERA Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>