force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Referral_Customer__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral CIF Records</relationshipLabel>
    <relationshipName>Referral_CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>