force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Referral_Employee__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>