force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Referral_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Employee_Name__c</fullName>
    <label>Referral Employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>