force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Code</label>
    <referenceTo>EYI_CP_Account__c</referenceTo>
    <relationshipLabel>Customer Information Form (Referral Name)</relationshipLabel>
    <relationshipName>Customer_Information_Form</relationshipName>
    <type>Lookup</type>
</CustomField>