force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Referral_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Unit_Number__c</fullName>
    <label>Referral Unit Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>